<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/background_app"
    android:padding="20dp"
    tools:context=".SettingsAddActivity">

    <TextView
        android:id="@+id/tvNumbersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/number_of_members"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvNumbers"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"  />

    <TextView
        android:id="@+id/tvNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="6"
        app:layout_constraintStart_toEndOf="@+id/tvNumbersText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"  />

    <SeekBar
        android:id="@+id/seekBarNum"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginVertical="30dp"
        android:layout_marginTop="28dp"
        android:max="15"
        android:min="3"
        android:progress="6"
        android:thumb="@drawable/thumb"
        android:progressDrawable="@drawable/progress_verde_amarillo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumbersText" /><!-- set custom progress drawable for the progress -->


    <TextView
        android:id="@+id/tvSecondsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvSeconds"
        app:layout_constraintTop_toBottomOf="@+id/seekBarNum"
        android:layout_marginTop="30dp" />
    <TextView
        android:id="@+id/tvSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="3"
        app:layout_constraintStart_toEndOf="@+id/tvSecondsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarNum"
        android:layout_marginTop="30dp" />

    <SeekBar
        android:id="@+id/seekBarSeconds"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginVertical="30dp"
        android:layout_marginTop="28dp"
        android:max="12"
        android:min="1"
        android:progress="3"
        android:thumb="@drawable/thumb"
        android:progressDrawable="@drawable/progress_amarillo_verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecondsText" />


    <Button
        android:id="@+id/btnSettingsDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/settings_done"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSettingsCancel"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSettingsCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/settings_cancel"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSettingsDone"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/swNumDig"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarSeconds" />

    <TextView
        android:id="@+id/tv1N"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="N"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/swNumDig"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarSeconds" />

    <TextView
        android:id="@+id/tv2N"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:text="NN"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/swNumDig"
        app:layout_constraintTop_toBottomOf="@+id/seekBarSeconds" />

</androidx.constraintlayout.widget.ConstraintLayout>