<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/background_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".AdditionActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/element_border_style"
            android:paddingHorizontal="8dp"
            android:paddingBottom="4dp"
            android:text="n"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAddOperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="@color/background_app"
            android:text="+"
            android:textColor="@color/background_tv"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/element_border_style"
            android:paddingHorizontal="8dp"
            android:paddingBottom="4dp"
            android:text="n"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="26sp"
            android:textStyle="bold" />



    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="26dp"
        android:background="@color/background_app"
        android:paddingHorizontal="8dp"
        android:textColor="@color/background_tv"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout1" />

    <TextView
        android:id="@+id/tvCorrectSolution"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="26dp"
        android:background="@drawable/element_border_style"
        android:paddingHorizontal="8dp"
        android:text="0000"
        android:textAlignment="viewEnd"
        android:textColor="@color/text"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTimer" />

    <TextView

        android:id="@+id/tvQualification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/background_app"
        android:text="V"
        android:textColor="@color/background_app"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCorrectSolution"
        app:layout_constraintTop_toTopOf="@+id/tvCorrectSolution"

        />

    <EditText
        android:id="@+id/etSolution"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/element_border_style"
        android:digits="0,1,2,3,4,5,6,7,8,9,-,."
        android:imeOptions="flagNoExtractUi"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:paddingHorizontal="8dp"
        android:singleLine="true"
        android:text="string/text_etSolution"
        android:textAlignment="viewEnd"
        android:textColor="@color/text"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCorrectSolution" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="2dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSolution">

        <Button
            android:id="@+id/btnBegin"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:paddingVertical="6dp"
            android:text="@string/begin"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/border_style"
            android:textSize="24sp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/border_style"
            app:strokeWidth="2dp"

            />

        <Button
            android:id="@+id/btnDone"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/done"
            android:textAllCaps="true"
            android:textColor="@color/border_style"
            android:textSize="24sp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/border_style"
            app:strokeWidth="2dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="1dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSolution">

            <Button
                android:id="@+id/btnMenu"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:paddingHorizontal="20dp"
                android:text="@string/menu"
                android:textAllCaps="true"
                android:textColor="@color/border_style"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                app:cornerRadius="20dp"
                android:layout_weight="1"
                app:strokeColor="@color/border_style"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnSettings"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/settings"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textColor="@color/border_style"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:strokeColor="@color/border_style"
                app:strokeWidth="2dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>